ya funciona todo el back con cors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,22 @@
 spring.application.name=areplab6
 
-# The format used for the keystore. It could be set to JKS in case it is a JKS file
-server.ssl.key-store-type=PKCS12
-# The path to the keystore containing the certificate
-server.ssl.key-store=classpath:/keytool/keystore/baeldung.jks
-# The password used to generate the certificate
-server.ssl.key-store-password=chocolatina
-# The alias mapped to the certificate
-server.ssl.key-alias=baeldung
 
-server.ssl.enabled=false
+# H2 Database Config
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.hikari.maximum-pool-size=5
+
+# Deshabilitar seguridad en la consola de H2
+spring.h2.console.settings.web-allow-others=true
+spring.h2.console.settings.trace=false
+
+# Configuración de Spring Security
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=USER,ADMIN
+
+
